--- a/index.html
+++ b/index.html
@@ -1,88 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Ly and Yussy Photo Album</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
-<h1><center>Ly and Yussy Photo Album</center></h1><br>
+    <h1>Ly and Yussy Photo Album</h1><br>
 
-<table>
-    <caption><strong>Our favourite medias</strong></caption>
-    <thead>
+    <nav class="menu">
+        <a href="#favs">Table</a>
+        <a href="#rankings">Rankings</a>
+        <a href="#reviews">Reviews</a>
+    </nav>
+
+    <section id="favs">
+        <h2>Our Favourite Media</h2>
+        <table>
+            <caption><strong>Media Details</strong></caption>
+            <thead>
+                <tr>
+                    <th>Poster</th>
+                    <th>Name</th>
+                    <th>Year</th>
+                    <th>Genre</th>
+                    <th>Description</th>
+                </tr>
+                
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <figure>
+                            <img src="https://m.media-amazon.com/images/M/MV5BYmU5OWM5ZTAtNjUzOC00NmUyLTgyOWMtMjlkNjdlMDAzMzU1XkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg"
+                                alt="Arcane Poster">
+                            <figcaption>Arcane Poster</figcaption>
+                        </figure>
+                    </td>
+                    <td>Arcane &#129497;</td>
+                    <td>2021</td>
+                    <td>Animation, Action, Adventure, TV Show</td>
+                    <td>Set in Utopian Piltover and the oppressed underground of Zaun, the story follows the origins of
+                        two
+                        iconic League Of Legends champions and the power that will tear them apart.
+                        <ul>
+                            <li><strong>Art and Animation</strong>: The series boasts high-quality animation and
+                                detailed
+                                artwork, bringing
+                                the world of <em>League of Legends</em> to life in a much better way than previous
+                                adaptations could
+                                achieve.</li>
+                            <li><strong>Story</strong>: Explore the origins of iconic League of Legends champions and
+                                the
+                                complex
+                                power struggles in <em>Piltover</em> and <em>Zaun</em>.</li>
+                            <li><strong>Action-Packed</strong>: <em>Arcane</em> offers thrilling action sequences and a
+                                captivating storyline that
+                                delves into the lore of the game.</li>
+                            <li><strong>Character Development</strong>: Follow the compelling character arcs of
+                                well-known
+                                champions and
+                                discover their backstories.</li>
+                        </ul>
+                        <a href="https://www.imdb.com/title/tt11126994/">IMDb</a>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <figure>
+                            <img src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p13139614_b_v10_ac.jpg"
+                                alt="Fleabag Poster">
+                            <figcaption>Fleabag Poster</figcaption>
+                        </figure>
+                    </td>
+                    <td>Fleabag &#9962;</td>
+                    <td>2016</td>
+                    <td>Drama, Comedy, TV Show</td>
+                    <td>Series adapted from the award-winning play about a young woman trying to cope with life in
+                        London
+                        whilst coming to terms with a recent tragedy.
+                        <ul>
+                            <li><strong>Unique Narrative Style</strong>: <em>Fleabag</em> breaks the fourth wall,
+                                allowing
+                                the main character to
+                                address the audience directly and share her thoughts.</li>
+                            <li><strong>Complex Characters</strong>: The series explores the complexities of
+                                relationships,
+                                grief, and
+                                self-discovery through well-developed characters.</li>
+                            <li><strong>Sharp Wit and Humor</strong>: <em>Fleabag</em> combines humor and poignant
+                                moments,
+                                creating a unique and
+                                engaging viewing experience.</li>
+                            <li><strong>Emotional Depth</strong>: The show delves into deeper emotional themes, making
+                                it
+                                both entertaining
+                                and thought-provoking.</li>
+                        </ul>
+                        <a href="https://www.imdb.com/title/tt5687612/">IMDb</a>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <figure><img src="https://i.pinimg.com/736x/05/d4/d3/05d4d3c3679baf538437651c66082df9.jpg"
+                                alt="Gilmore girls Poster">
+                            <figcaption>Gilmore Girls Poster</figcaption>
+                        </figure>
+
+                    </td>
+                    <td>Gilmore Girls &#128109;</td>
+                    <td>2000</td>
+                    <td>Drama, TV Show</td>
+                    <td>A dramedy centering around the relationship between a thirtysomething single mother and her teen
+                        daughter living in Stars Hollow, Connecticut.
+                        <ul>
+                            <li><strong>Quirky Characters</strong>: Stars Hollow is filled with eccentric and lovable
+                                characters, adding
+                                humor and charm to the series.</li>
+                            <li><strong>Fast-Paced Dialogue</strong>: The show is famous for its rapid-fire,
+                                pop-culture-infused
+                                conversations between <em>Lorelai</em> and <em>Rory</em>.</li>
+                            <li><strong>Relationships</strong>: Explore the ups and downs of romantic relationships,
+                                friendships, and family
+                                dynamics throughout the series.</li>
+                            <li><strong>Small-Town Vibes</strong>: The picturesque setting of <em>Stars Hollow</em> adds
+                                a
+                                cozy and nostalgic
+                                atmosphere to the show.</li>
+                        </ul>
+                        <a href="https://www.imdb.com/title/tt0238784/">IMDb</a>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <figure><img src="https://m.media-amazon.com/images/I/81T-cZtLVUL._AC_UF1000,1000_QL80_.jpg"
+                                alt="A Thousand Splendid Suns">
+                            <figcaption>A Thousand Splendid Suns cover</figcaption>
+                        </figure>
+
+                    </td>
+                    <td>A Thousand Splendid Suns &#x1F305;</td>
+                    <td>2007</td>
+                    <td>Domestic fiction, History, Book</td>
+                    <td>A Thousand Splendid Suns, a novel by Khaled Hosseini, is a gripping tale of two young women,
+                        Mariam,
+                        an illegitimate child, and Laila, an orphan, and the difficult lives they lead after marrying
+                        the
+                        same man, Rasheed.
+                        <ul>
+                            <li><strong>Compelling Storyline</strong>: The novel weaves together the lives of
+                                <em>Mariam</em> and <em>Laila</em>, portraying
+                                the challenges they face in war-torn Afghanistan.
+                            </li>
+                            <li><strong>Friendship</strong>: The story beautifully explores the evolving friendship
+                                between
+                                <em>Mariam</em> and
+                                <em>Laila</em> as they navigate their difficult circumstances.
+                            </li>
+                            <li><strong>Context</strong>: Set against the backdrop of significant events in
+                                <em>Afghanistan's</em> history,
+                                the novel provides insight into the lives of its characters.
+                            </li>
+                            <li><strong>Impact</strong>: <em>A Thousand Splendid Suns</em> elicits a range of emotions,
+                                from
+                                heartbreak to
+                                hope, making it a memorable read.</li>
+                        </ul>
+                        <a href="https://www.goodreads.com/review/show/4052165912">Goodreads</a>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+    </section>
+
+    <section id="rankings">
+        <h2>Rankings</h2>
+        <ol type="1">
+            <li><a href="#suns-rev">A Thousand Splendid Suns</a><br></li>
+            <li><a href="#arcane-rev">Arcane</a><br></li>
+            <li><a href="#gilmore-rev">Gilmore Girls</a></li>
+            <li><a href="#fleabag-rev">Fleabag</a></li>
+        </ol>
+    </section>
+
+    <section id="reviews">
+        <h2>Reviews</h2>
+
+        <section id="suns-rev">
+            <h3>A Thousand Splendid suns</h3>
+            <p>
+                Like diamonds and roses hidden under bomb rubble, this is a story of intense beauty and strength buried
+                under the surface of the cruel and capricious life imposed upon two Afghani women.
+                <br><em>She remembered Nana saying once that each snowflake was a sigh heaved by an aggrieved woman
+                    somewhere in the world. That all the sighs drifted up the sky, gathered into clouds, then broke into
+                    tiny pieces that fell silently on the people below. As a reminder of how people like us suffer,
+                    she'd
+                    said. How quietly we endure all that falls upon us.</em><br>
+                Staggeringly beautiful and deep and rich and sad and frightening and infuriating. Buy the book and read
+                it.
+            </p>
+        </section>
+
+        <section id="arcane-rev">
+            <h3>Arcane</h3>
+            <p>
+                Arcane is a breathtaking and emotionally charged masterpiece that immerses viewers in the vividly
+                realized
+                world of Piltover and Zaun. With its stunning animation, intricate storytelling, and deeply compelling
+                characters, the series not only captures the essence of the beloved League of Legends universe but also
+                transcends expectations, offering a gripping and personal narrative that resonates long after the
+                credits
+                roll. 10/10
+            </p>
+        </section>
+
+        <section id="gilmore-rev">
+            <h3>Gilmore Girls</h3>
+            <p>
+                Gilmore Girls is a very fun, relaxing show to watch, perfect for a fall season binge because of the
+                show's
+                humour and entertainment. Gilmore Girls is a thoroughly wholesome TV hit. Its unhurried pace, low stakes
+                and
+                sleepy, picturesque setting have led fans and critics alike to cite it as a high point for comfort TV.
+            </p>
+        </section>
+
+        <section id="fleabag-rev">
+            <h3>Fleabag</h3>
+            <p>
+                Fleabag is an electrifying rollercoaster through the complexities of life, love, and self-discovery.
+                With
+                <abbr title="Phoebe Waller-Bridge">PWB</abbr>'s raw and relatable portrayal, the series becomes a deeply
+                personal journey that effortlessly blends wit, vulnerability, and an unapologetic authenticity, leaving
+                an
+                indelible mark on the heart of its viewers
+            </p>
+        </section>
+    </section>
+
+    <form action="https://webtech.labs.vu.nl/api24/db694639" method="post">
         <tr>
-            <th>Poster</th>
-            <th>Name</th>
-            <th>Year</th>
-            <th>Genre</th>
-            <th>Description</th>
+            <td><input type="text" name="poster" placeholder="Poster"></td>
+            <td><input type="text" name="name" placeholder="Name"></td>
+            <td><input type="text" name="year" placeholder="Year"></td>
+            <td><input type="text" name="genre" placeholder="Genre"></td>
+            <td><input type="text" name="description" placeholder="Description"></td>
         </tr>
-    </thead>
-    <tbody>
         <tr>
-            <td><img src="https://m.media-amazon.com/images/M/MV5BYmU5OWM5ZTAtNjUzOC00NmUyLTgyOWMtMjlkNjdlMDAzMzU1XkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_FMjpg_UX1000_.jpg" alt="Arcane Poster" height = "200" width = "200"></td>
-            <td>Arcane &#129497;</td>
-            <td>2021</td>
-            <td>Animation, Action, Adventure, TV Show</td>
-            <td>Set in Utopian Piltover and the oppressed underground of Zaun, the story follows the origins of two iconic League Of Legends champions and the power that will tear them apart.</td>
+            <td colspan="5" align="center">
+                <input type="submit" value="Add New Media">
+            </td>
         </tr>
+    </form>
 
-        <tr>
-            <td><img src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p13139614_b_v10_ac.jpg" alt="Fleabag Poster" height = "200" width = "200"></td>
-            <td>Fleabag &#9962;</td>
-            <td>2016</td>
-            <td>Drama</td>
-            <td>Series adapted from the award-winning play about a young woman trying to cope with life in London whilst coming to terms with a recent tragedy.</td>
-        </tr>
-
-        <tr>
-            <td><img src="https://i.pinimg.com/736x/05/d4/d3/05d4d3c3679baf538437651c66082df9.jpg" alt = "Gilmore girls Poster" height = "200" width = "200"></td>
-            <td>Gilmore Girls &#128109;</td>
-            <td>2000</td>
-            <td>Drama</td>
-            <td>A dramedy centering around the relationship between a thirtysomething single mother and her teen daughter living in Stars Hollow, Connecticut.</td>
-        </tr>
-    </tbody>
-</table>
-
-
-<section>
-    <h2>Ranking the medias</h2>
-    <ol type="1">
-        <li><a href="#arcane-rev">Arcane</a><br></li>
-        <li><a href="#gilmore-rev">Gilmore Girls</a></li>
-        <li><a href="#fleabag-rev">Fleabag review</a></li>
-    </ol>
-</section>
-
-
-<h2>Reviews</h2>
-<section id="gilmore-rev">
-    <h3>Gilmore Girls review</h3>
-    <p>
-        Gilmore Girls is a very fun, relaxing show to watch.<br>
-        It is perfect for a fall season binge because of the show's humour,<br>
-        and it is always entertaining. There is not much to stress about when<br>
-        watching the show, but it never gets boring.<br>
-    </p>
-</section>
-
-<section id="fleabag-rev">
-    <h3>Fleabag review</h3>
-    <p>
-        Yahya yap about fleabag
-    </p>
-</section>
-
-<section id="arcane-rev">
-    <h3>Arcane review</h3>
-    <p>
-        yipyap about arcane
-    </p>
-</section>
-
+    <footer>
+        <p>Site made by:
+            <a href="mailto:m.y.b.e.qureshi@student.vu.nl">Yahya</a> and
+            <a href="mailto:c.l.le@student.vu.nl">Ly</a>
+        </p>
+    </footer>
 </body>
+
 </html>
